--- a/css/_global.scss
+++ b/css/_global.scss
@@ -19,10 +19,13 @@ $slowTransition: all 0.7s;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-size: 13px;
+    font-size: 14px;
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     min-height: 100vh;
     background-color: #f0f8ff;
 }
@@ -87,5 +90,17 @@ button:focus {
                 border: 0.1em solid $accentColor;
                 transition: $mainTransition;
             }
-    } 
+    }
+}
+
+#loading {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.897);
+    z-index: 10;
 }
