--- a/css/index.css
+++ b/css/index.css
@@ -3,10 +3,20 @@
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  font-size: 13px;
+  font-size: 14px;
 }
 
 body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   min-height: 100vh;
   background-color: #f0f8ff;
 }
@@ -25,6 +35,25 @@ button:focus {
 
 * a:hover {
   color: #FF3300;
+}
+
+#loading {
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.897);
+  z-index: 10;
 }
 
 header {
@@ -159,13 +188,13 @@ header {
   z-index: 1;
 }
 
-.searchForm:focus-within {
+.focusControl:focus-within {
   border: 0.1em solid #FF3300;
   border-radius: 5px;
   margin: 0 0.5em;
 }
 
-.searchForm:focus-within button {
+.focusControl:focus-within button {
   background-color: #FF3300;
   color: #ffffff;
   border-color: #FF3300;
@@ -173,14 +202,13 @@ header {
   left: calc(200px + 0.3em);
 }
 
-.searchForm:focus-within i {
+.focusControl:focus-within i {
   position: absolute;
   left: calc(-15px - 0.5em);
   color: #FF3300;
 }
 
 main {
-  height: 1000px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -188,20 +216,18 @@ main {
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 80%;
+  height: 100%;
   margin: 2em auto;
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
 }
 
 #feedWrap, #widgetsWrap {
   height: 100%;
   margin: 0 1em;
-}
-
-#feedWrap {
-  width: 70%;
-}
-
-#widgetsWrap {
-  width: 30%;
+  width: 50%;
+  background-color: white;
 }
 
 #feedControl {
@@ -229,28 +255,135 @@ main {
   height: 100%;
 }
 
-#feedControl > div > a {
-  line-height: 50px;
-  margin: 0 1em;
-  height: 100%;
-  font-weight: bold;
-}
-
-#feedControl > div > a[value=active] {
+#feedOptions button {
+  position: relative;
+  padding: 0.3em;
+  border: 0.1em solid #ffffff;
+  background-color: #ffffff;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  text-decoration: none;
   color: #FF3300;
-  border-bottom: solid 2px #FF3300;
+  text-align: center;
+  cursor: pointer;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
-#feedControl > a:hover {
+#feedOptions button:hover {
+  background-color: #FF3300;
+  color: #ffffff;
+  border: 0.1em solid #FF3300;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+#feedOptions .active {
+  border-bottom: 0.3em solid #FF3300;
+  margin-bottom: 0.2em;
+}
+
+#feedControl > button:hover {
   position: relative;
 }
 
-#feedControl > a:hover::after {
+#feedControl > button:hover::after {
   position: absolute;
   left: -5px;
   top: -15px;
   content: 'sort';
   color: #8e8e8e;
+}
+
+.searchResult {
+  margin: 1em 0;
+  width: 100%;
+  display: block;
+  line-height: 2em;
+  font-size: 1.5em;
+  text-align: center;
+  background-color: greenyellow;
+}
+
+.searchResult > u {
+  font-size: 1em;
+  color: #FF3300;
+}
+
+#feedContent {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#feedContent > article {
+  margin: 1em 0;
+  padding: 0 3em;
+}
+
+#feedContent > article a {
+  display: block;
+  width: 100%;
+  color: #FF3300;
+  margin-top: 0.5em;
+  text-align: center;
+}
+
+#feedContent > article > span {
+  display: block;
+  text-align: end;
+  border-bottom: solid 1px #FF3300;
+  margin-bottom: 0.5em;
+  color: #FF3300;
+}
+
+#feedContent > article > div {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+#feedContent > article > div > div:first-child {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 100px;
+  min-width: 100px;
+  max-height: 100px;
+  margin-right: 1em;
+}
+
+#feedContent > article > div > div:first-child > img {
+  max-width: 100%;
+  max-height: 100%;
+  margin: auto;
+}
+
+#feedContent > article > div > div:last-child {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#feedContent > article > div > div:last-child > p {
+  text-overflow: ellipsis;
+  margin-top: 0.5em;
+}
+
+#feedContent > article > div > div:last-child > a {
+  -ms-flex-item-align: end;
+      align-self: flex-end;
 }
 
 footer {
