--- a/css/_body.scss
+++ b/css/_body.scss
@@ -12,7 +12,6 @@ main {
     height: 100%;
     margin: 0 1em;
     width: 50%;
-    background-color: white;
 }
 
 
@@ -23,6 +22,7 @@ main {
     height: 50px;
     padding: 0 2em;
     background-color: white;
+    border-radius: 5px;
 
     & > div {
         display: flex;
@@ -59,10 +59,10 @@ main {
     line-height: 2em;
     font-size: 1.5em;
     text-align: center;
-    background-color: greenyellow;
+    color: white;
+    background-color: rgb(55, 165, 255);
         & > u {
             font-size: 1em;
-            color: $accentColor;
         }
 }
 
@@ -74,17 +74,16 @@ main {
 #feedContent > article {
     // width: 100%;
     margin: 1em 0;
-    padding: 0 3em;
-    // border: 1px solid $mutedColor;
+    padding: 1em;
+    background-color: white;
+    border-radius: 5px;
+    -webkit-box-shadow: 1px 1px 2px 0px rgba(142,142,142,1);
+    -moz-box-shadow: 1px 1px 2px 0px rgba(142,142,142,1);
+    box-shadow: 1px 1px 2px 0px rgba(142,142,142,1);
 }
 
 #feedContent > article a {
-    display: block;
-    width: 100%;
-    // background-color: rgba(172, 255, 47, 0.336);
-    color: $accentColor;
-    margin-top: 0.5em;
-    text-align: center;
+    
 }
 
 #feedContent > article > span {
@@ -120,7 +119,20 @@ main {
             margin-top: 0.5em;
         }
         & > a {
-            align-self: flex-end;
+            display: block;
+            width: 100%;
+            padding: 0.25em;
+            color: blue;
+            // background-color: rgba(172, 255, 47, 0.336);
+            margin-top: 0.5em;
+            text-align: center;
+            font-weight: bold;
+            align-self: baseline;
+
+            &:hover {
+                color: $accentColor;
+                background-color: rgba(172, 255, 47, 0.336);
+            }
         }
     }
 }
