--- a/css/_global.scss
+++ b/css/_global.scss
@@ -93,14 +93,13 @@ button:focus {
     }
 }
 
-#loading {
-    display: none;
+.loading {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.897);
+    margin: 2em auto;
     z-index: 10;
 }
