--- a/css/index.css
+++ b/css/index.css
@@ -37,8 +37,10 @@ button:focus {
   color: #FF3300;
 }
 
-#loading {
-  display: none;
+.loading {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -49,10 +51,9 @@ button:focus {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.897);
+  margin: 2em auto;
   z-index: 10;
 }
 
@@ -227,7 +228,6 @@ main {
   height: 100%;
   margin: 0 1em;
   width: 50%;
-  background-color: white;
 }
 
 #feedControl {
@@ -243,6 +243,7 @@ main {
   height: 50px;
   padding: 0 2em;
   background-color: white;
+  border-radius: 5px;
 }
 
 #feedControl > div {
@@ -302,12 +303,12 @@ main {
   line-height: 2em;
   font-size: 1.5em;
   text-align: center;
-  background-color: greenyellow;
+  color: white;
+  background-color: #37a5ff;
 }
 
 .searchResult > u {
   font-size: 1em;
-  color: #FF3300;
 }
 
 #feedContent {
@@ -322,15 +323,11 @@ main {
 
 #feedContent > article {
   margin: 1em 0;
-  padding: 0 3em;
-}
-
-#feedContent > article a {
-  display: block;
-  width: 100%;
-  color: #FF3300;
-  margin-top: 0.5em;
-  text-align: center;
+  padding: 1em;
+  background-color: white;
+  border-radius: 5px;
+  -webkit-box-shadow: 1px 1px 2px 0px #8e8e8e;
+  box-shadow: 1px 1px 2px 0px #8e8e8e;
 }
 
 #feedContent > article > span {
@@ -382,8 +379,20 @@ main {
 }
 
 #feedContent > article > div > div:last-child > a {
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+  display: block;
+  width: 100%;
+  padding: 0.25em;
+  color: blue;
+  margin-top: 0.5em;
+  text-align: center;
+  font-weight: bold;
+  -ms-flex-item-align: baseline;
+      align-self: baseline;
+}
+
+#feedContent > article > div > div:last-child > a:hover {
+  color: #FF3300;
+  background-color: rgba(172, 255, 47, 0.336);
 }
 
 footer {
