--- a/css/_body.scss
+++ b/css/_body.scss
@@ -12,7 +12,7 @@ main {
     height: 100%;
     margin: 0 1em;
     // width: 50%;
-    border: 1px solid black;
+    // border: 1px solid black;
 }
 
 #feedWrap {
