--- a/css/index.css
+++ b/css/index.css
@@ -312,15 +312,17 @@ main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 #feedContent > article {
-  margin: 1em 0;
-  padding: 1em;
+  max-width: 40%;
+  margin: 1em;
+  padding: 1em 1em 0 1em;
   background-color: white;
   border-radius: 5px;
   -webkit-box-shadow: 1px 1px 2px 0px #8e8e8e;
