added box-shadow to feed controls

--- a/css/index.css
+++ b/css/index.css
@@ -255,6 +255,8 @@ main {
   padding: 0 2em;
   background-color: white;
   border-radius: 5px;
+  -webkit-box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.75);
 }
 
 #feedControl > div {
