--- a/css/_feedWrap.scss
+++ b/css/_feedWrap.scss
@@ -6,6 +6,9 @@
     padding: 0 2em;
     background-color: white;
     border-radius: 5px;
+    -webkit-box-shadow: 1px 1px 2px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 1px 1px 2px 0px rgba(0,0,0,0.75);
+box-shadow: 1px 1px 2px 0px rgba(0,0,0,0.75);
 
     & > div {
         display: flex;
