--- a/css/index.css
+++ b/css/index.css
@@ -70,6 +70,8 @@ header {
   font-family: "Noto Sans", sans-serif;
   padding: 0.5em;
   background-color: #ffffff;
+  -webkit-box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.75);
 }
 
 #brand {
@@ -193,6 +195,8 @@ header {
   border: 0.1em solid #FF3300;
   border-radius: 5px;
   margin: 0 0.5em;
+  -webkit-box-shadow: 1px 1px 1px 0px #ff3300;
+  box-shadow: 1px 1px 1px 0px #ff3300;
 }
 
 .focusControl:focus-within button {
