--- a/css/_feedWrap.scss
+++ b/css/_feedWrap.scss
@@ -87,6 +87,7 @@ box-shadow: 1px 1px 2px 0px rgba(0,0,0,0.75);
 #feedContent > article > div {
     flex: 2;
     display: flex;
+    align-items: center;
     
     & > div:first-child {
         display: flex;
