--- a/css/index.css
+++ b/css/index.css
@@ -360,6 +360,9 @@ main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 #feedContent > article > div > div:first-child {
