--- a/css/index.css
+++ b/css/index.css
@@ -256,6 +256,7 @@ main {
       -ms-flex-align: center;
           align-items: center;
   height: 50px;
+  width: 100%;
   padding: 0 2em;
   background-color: white;
   border-radius: 5px;
@@ -323,6 +324,7 @@ main {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
+  width: 100%;
 }
 
 #feedContent > article {
@@ -337,6 +339,7 @@ main {
       -ms-flex-align: stretch;
           align-items: stretch;
   max-width: 40%;
+  min-width: 370px;
   margin: 1em;
   padding: 1em 1em 0 1em;
   background-color: white;
@@ -504,5 +507,60 @@ footer * {
 
 footer > div:nth-child(2) > a:first-child {
   margin: 1em;
+}
+
+@media only screen and (max-width: 1400px) {
+  main {
+    width: auto;
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  main {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #feedWrap {
+    margin-bottom: 2em;
+    min-width: calc(100%-2em);
+  }
+}
+
+@media only screen and (max-width: 840px) {
+  #feedContent > article {
+    width: 80%;
+    max-width: 80%;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  #feedContent > article {
+    width: 100%;
+    max-width: 100%;
+  }
+}
+
+@media only screen and (max-width: 670px) {
+  #brand::after {
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    content: "\f0d7";
+    margin-left: 1em;
+    color: #FF3300;
+  }
+  header {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .searchForm, .authButtons {
+    display: none;
+  }
 }
 /*# sourceMappingURL=index.css.map */
